--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="header_in">
             <h1>
-                <i class="fa-brands fa-github"></i> <span>Responsive</span> 
+                <i class="fa-solid fa-boxes-packing"></i> <span>Responsive</span> 
             </h1>
             <nav>
                 <ul>
